--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 					    <div class="col-12 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="#" class="image featured"><img src="./images/shakereader.jpg" alt="" /></a>
-								<h3>Let's smartphones 'read' tags</h3>
+								<h3>Let smartphones 'read' tags</h3>
 								<div align="left">
 								<p><strong>Key techniques：</strong> RFID，Gesture Identification<br /><strong>Publications:</strong><br >[1] <font color="#FF0000">[INFOCOM 2021]</font> K. Cui, <strong>Y. Wang</strong>, Y. Zheng and J. Han.  "ShakeReader: 'Read' UHF RFID using Smartphone, in IEEE INFOCOM 2021. <strong>(CCF A)</strong></p>
 								</div>
