--- a/chs/index_chs.html
+++ b/chs/index_chs.html
@@ -37,7 +37,7 @@
 						<div class="col-8 col-7-large col-12-medium">
 							<header>
 								<h1><strong>王砚文</strong><br /></h1>
-								<h3>湖南大学<a href="http://eeit.hnu.edu.cn/"><font color="#0000FF">电气与信息工程</font></a>副教授</h3>
+								<h3>湖南大学<a href="http://eeit.hnu.edu.cn/"><font color="#0000FF">电气与信息工程学院</font></a>副教授</h3>
 							</header>
 							<p>欢迎来到我的个人主页<br /><i class="fa fa-envelope" aria-hidden="true"></i> <a href="mailto:wangyw@hnu.edu.cn">联系我</a></p>
 							<a href="#work" class="button large scrolly">我的个人简介</a>
