--- a/chs/index_chs.html
+++ b/chs/index_chs.html
@@ -152,7 +152,7 @@
 					<div class="row">
 					    <div class="col-12 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="./images/shakereader.jpg" alt="" /></a>
+								<a href="#" class="image featured"><img src="../images/shakereader.jpg" alt="" /></a>
 								<h3>让智能手机'读'RFID标签</h3>
 								<div align="left">
 								<p><strong>主要技术：</strong> RFID，手势识别<br /><strong>主要成果：</strong><br >[1] <font color="#FF0000">[INFOCOM 2021]</font> K. Cui, <strong>Y. Wang</strong>, Y. Zheng and J. Han.  "ShakeReader: 'Read' UHF RFID using Smartphone, in IEEE INFOCOM 2021. <strong>(CCF A)</strong></p>
