--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
 						<div class="col-8 col-7-large col-12-medium">
 							<header>
 								<h1>Hello, I am <strong>Yanwen Wang</strong><br /></h1>
-								<h3>I am an associate professor in <a href="http://eeit.hnu.edu.cn/"><font color="#0000FF">College of Electrical and Information Engineering</font></a> at Hunan University, Changsha, China</h3>
+								<h3>Associate Professor</h3>
+								<h3><a href="http://eeit.hnu.edu.cn/"><font color="#0000FF">College of Electrical and Information Engineering</font></a></h3> 
+								<h3>Hunan University, Changsha, China</h3>
 							</header>
 							<p>Welcome to visit my homepage<br /><i class="fa fa-envelope" aria-hidden="true"></i> <a href="mailto:wangyw@hnu.edu.cn">Contact me</a></p>
 							<a href="#work" class="button large scrolly">My Bio<br /></a>
