--- a/chs/index_chs.html
+++ b/chs/index_chs.html
@@ -325,7 +325,7 @@
 							<div align="left">
 								<span class="icon featured fa-file "></span>
 								<h3>审稿人</h3>
-								<p>1. IEEE Transactions on Mobile Computing<br />2. IEEE Transactions on Wireless Communications<br />3. ACM Computing Surveys<br />4. IEEE Internet of Things Journal<br />5. IEEE System Journal<br />6. IEEE/CIC ICCC'16<br />7. IEEE WCNC 2015</p>
+								<p>1. IEEE Transactions on Mobile Computing<br />2. IEEE Transactions on Wireless Communications<br />3. ACM Computing Surveys<br />4. IEEE Internet of Things Journal<br />5. ACM Transactions on Intelligent Systems and Technology<br />6. IEEE System Journal<br />7. IEEE/CIC ICCC'16<br />8. IEEE WCNC 2015</p>
 						    </div>
 							</section>
 						</div>
