--- a/chs/index_chs.html
+++ b/chs/index_chs.html
@@ -6,12 +6,32 @@
 -->
 <html>
 	<head>
+	    <style>
+        .button {
+         border: none;
+         color: white;
+         padding: 15px 32px;
+         text-align: center;
+         text-decoration: none;
+         display: inline-block;
+         font-size: 16px;
+         margin: 4px 2px;
+         cursor: pointer;
+        }
+	    
+        .button1 {background-color: #4CAF50;} /* Green */
+        .button2 {background-color: #008CBA;} /* Blue */
+        </style>
+	
+		
 		<title>王砚文 个人主页</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body class="is-preload">
+	
+	<button class="button button2">Blue</button>
 
 		<!-- Nav -->
 			<nav id="nav">
