--- a/chs/index_chs.html
+++ b/chs/index_chs.html
@@ -6,6 +6,7 @@
 -->
 <html>
 	<head>
+        <!--	
 	    <style>
         .button {
          border: none;
@@ -22,7 +23,7 @@
         .button1 {background-color: #4CAF50;} /* Green */
         .button2 {background-color: #008CBA;} /* Blue */
         </style>
-	
+	    -->
 		
 		<title>王砚文 个人主页</title>
 		<meta charset="utf-8" />
@@ -31,7 +32,7 @@
 	</head>
 	<body class="is-preload">
 	
-	<button class="button button2">Blue</button>
+<!--	<button class="button button2">Blue</button>  -->
 
 		<!-- Nav -->
 			<nav id="nav">
