--- a/chs/index_chs.html
+++ b/chs/index_chs.html
@@ -178,7 +178,7 @@
 								<a href="#" class="image featured"><img src="../images/shakereader.jpg" alt="" /></a>
 								<h3>让智能手机'读'RFID标签</h3>
 								<div align="left">
-								<p><strong>主要技术：</strong> RFID，手势识别<br /><strong>主要成果：</strong><br >[1] <span style="background-color:#0099FF"><font color="#FFFFFF"><strong>INFOCOM 2021</strong></font></span> K. Cui, <strong>Y. Wang</strong>, Y. Zheng and J. Han.  "ShakeReader: 'Read' UHF RFID using Smartphone, in IEEE INFOCOM 2021. <strong>(CCF A)</strong></p>
+								<p><strong>主要技术：</strong> RFID，手势识别<br /><strong>主要成果：</strong><br >[1] <span style="background-color:#0099FF"><strong>INFOCOM 2021</strong></span> K. Cui, <strong>Y. Wang</strong>, Y. Zheng and J. Han.  "ShakeReader: 'Read' UHF RFID using Smartphone, in IEEE INFOCOM 2021. <strong>(CCF A)</strong></p>
 								</div>
 							</article>
 						</div>
