--- a/chs/index_chs.html
+++ b/chs/index_chs.html
@@ -188,7 +188,7 @@
 								<a href="#" class="image featured"><img src="../images/pic03.png" alt="" /></a>
 								<h3>手势识别</h3>
 							    <div align="left">
-								<p><strong>主要技术：</strong> 声学传感, 信号处理, 深度学习<br /><strong>主要成果：<br ></strong>[1] <font color="#FF0000">[TMC]</font> <strong>Y. Wang</strong>, J. Shen and Y. Zheng, "Push the Limit of Acoustic Gesture Recognition," in IEEE Transactions on Mobile Computing, accepted to appear, 2020. (<strong>CCF A</strong>)<br />[2] <font color="#FF0000">[INFOCOM 2020]</font> <strong>Y. Wang</strong>, J. Shen and Y. Zheng, "Push the Limit of Acoustic Gesture Recognition," in IEEE INFOCOM 2020. <strong><font color="#FF0000">[Best Paper Award]</font></strong> <strong>(CCF A)</strong> <a href="../papers/infocom2020.pdf">[pdf]</a> <a href="../papers/infocom.mp4">[video]</a> <a href="../papers/infocom_slide.pdf">[slide]</a></p>
+								<p><strong>主要技术：</strong> 声学传感, 信号处理, 深度学习<br /><strong>主要成果：<br ></strong>[1] <font color="#FF0000">[TMC]</font> <strong>Y. Wang</strong>, J. Shen and Y. Zheng, "Push the Limit of Acoustic Gesture Recognition," in IEEE Transactions on Mobile Computing, accepted to appear, 2020. (<strong>CCF A，中科院一区</strong>)<br />[2] <font color="#FF0000">[INFOCOM 2020]</font> <strong>Y. Wang</strong>, J. Shen and Y. Zheng, "Push the Limit of Acoustic Gesture Recognition," in IEEE INFOCOM 2020. <strong><font color="#FF0000">[Best Paper Award]</font></strong> <strong>(CCF A)</strong> <a href="../papers/infocom2020.pdf">[pdf]</a> <a href="../papers/infocom.mp4">[video]</a> <a href="../papers/infocom_slide.pdf">[slide]</a></p>
 								</div>
 							</article>
 						</div>
@@ -208,7 +208,7 @@
 								<a href="#" class="image featured"><img src="../images/pic01.png" alt="" /></a>
 								<h3>呼吸监测</h3>
 							    <div align="left">
-								<p><strong>主要技术：</strong> RFID，信号处理<br /><strong>主要成果：<br ></strong>[1] <font color="#FF0000">[TMC]</font> <strong>Y. Wang</strong> and Y. Zheng, "TagBreathe: Monitor Breathing with Commodity RFID Systems," in IEEE Transactions on Mobile Computing （TMC）, 2019. <strong>(CCF A)</strong> <a href="../papers/TMC2900214.pdf">[pdf]</a><br />[2] <font color="#FF0000">[ICDCS'17]</font> Y. Hou, <strong>Y. Wang</strong> and Y. Zheng, "TagBreathe: Monitor Breathing with Commodity RFID Systems," in IEEE ICDCS 2017. <strong>(CCF B)</strong> <a href="../papers/icdcs2017.pdf">[pdf]</a> <a href="../papers/icdcs_slide.pdf">[slide]</a></p>
+								<p><strong>主要技术：</strong> RFID，信号处理<br /><strong>主要成果：<br ></strong>[1] <font color="#FF0000">[TMC]</font> <strong>Y. Wang</strong> and Y. Zheng, "TagBreathe: Monitor Breathing with Commodity RFID Systems," in IEEE Transactions on Mobile Computing （TMC）, 2019. <strong>(CCF A，中科院一区)</strong> <a href="../papers/TMC2900214.pdf">[pdf]</a><br />[2] <font color="#FF0000">[ICDCS'17]</font> Y. Hou, <strong>Y. Wang</strong> and Y. Zheng, "TagBreathe: Monitor Breathing with Commodity RFID Systems," in IEEE ICDCS 2017. <strong>(CCF B)</strong> <a href="../papers/icdcs2017.pdf">[pdf]</a> <a href="../papers/icdcs_slide.pdf">[slide]</a></p>
 								</div>
 							</article>
 						</div>
