--- a/chs/index_chs.html
+++ b/chs/index_chs.html
@@ -74,7 +74,7 @@
 							<h4>2019年4月: 我们的工作<font color="#FF0000"> ‘TagBreathe’ </font>的期刊版本发表在<font color="#0000FF">IEEE TMC</font>！<br /></h4>
 							<h4>2018年12月: 我们的工作<font color="#FF0000"> ‘TACT’ </font>发表在<font color="#0000FF">ACM IMWUT (UbiComp 2019)</font>！<br /></h4>
 							<h4>2017年7月: 我们的工作<font color="#FF0000"> ‘TagBreathe’ </font>被<font color="#0000FF">IEEE ICDCS 2017</font>接受并发表！<br /></h4>
-							<!-- <h4>2016年1月: 我们的工作<font color="#FF0000"> ‘SDN-ECCKN’ </font>发表在<font color="#0000FF">Journal of Network and Computer Applications (JNCA)</font>。<br /></h4> -->
+							 <h4>2017年1月: 我们的工作<font color="#FF0000"> ‘SDN-ECCKN’ </font>获得了<font color="#0000FF">Journal of Network and Computer Applications (JNCA) 2017唯一最佳论文奖</font>！&#128516;&#128516;</h4>
 						</div>
 					</div>
 				</div>
