--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 							<h4>2019, December: Our work <font color="#FF0000">'RobuCIR'</font> was accepted to appear to <font color="#0000FF">INFOCOM 2020</font>!<br /></h4>
 							<h4>2019, April: Our journal version of <font color="#FF0000">'TagBreathe'</font> was published to <font color="#0000FF">IEEE TMC</font>!<br /></h4>
 							<h4>2018, December: Our work <font color="#FF0000">'TACT'</font> was accepted and published to <font color="#0000FF">ACM IMWUT (UbiComp 2019)</font>!<br /></h4>
-							<h4>2018, January: Our work <font color="#FF0000">'SDN-ECCKN'</font> was awarded <font color="#0000FF">Journal of Network and Computer Applications (JNCA) 2017 Best Research Paper</font>!</h4>
+							<h4>2018, January: Our work <font color="#FF0000">'SDN-ECCKN'</font> was awarded <font color="#0000FF">Journal of Network and Computer Applications (JNCA) 2017 Best Research Paper</font>!&#128516;&#128516;</h4>
 							<h4>2017, July: Our work <font color="#FF0000">'TagBreathe'</font> was accepted and published to <font color="#0000FF">IEEE ICDCS 2017</font>!</h4>
 							
 						</div>						
