--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 							<a href="#work" class="button large scrolly">My Bio<br /></a>
 							<h2><strong></strong><br /></h2>
 							<h2><strong>News</strong><br /></h2>
+							<h4>2021, March: Our low-cost RFID system for parallel sensing tasks was accepted to appear to <font color="#0000FF">IEEE IOTJ</font>!<br /></h4>
 							<h4>2020, December: Our work <font color="#FF0000">'ShakeReader'</font> was accepted to appear to <font color="#0000FF">INFOCOM 2021</font>!<br /></h4>
 							<h4>2020, October: Our journal version of <font color="#FF0000">'RobuCIR'</font> was accepted by <font color="#0000FF">IEEE TMC</font>!<br /></h4>
 							<h4>2020, July: Our work <font color="#FF0000">'RobuCIR'</font> won <font color="#0000FF">INFOCOM 2020 Best Paper Award</font>! &#128516;&#128516;<br /></h4>
@@ -53,7 +54,7 @@
 							<h4>2019, April: Our journal version of <font color="#FF0000">'TagBreathe'</font> was published to <font color="#0000FF">IEEE TMC</font>!<br /></h4>
 							<h4>2018, December: Our work <font color="#FF0000">'TACT'</font> was accepted and published to <font color="#0000FF">ACM IMWUT (UbiComp 2019)</font>!<br /></h4>
 							<h4>2018, January: Our work <font color="#FF0000">'SDN-ECCKN'</font> was awarded <font color="#0000FF">Journal of Network and Computer Applications (JNCA) 2017 Best Research Paper</font>!&#128516;&#128516;</h4>
-							<h4>2017, July: Our work <font color="#FF0000">'TagBreathe'</font> was accepted and published to <font color="#0000FF">IEEE ICDCS 2017</font>!</h4>
+							<!-- <h4>2017, July: Our work <font color="#FF0000">'TagBreathe'</font> was accepted and published to <font color="#0000FF">IEEE ICDCS 2017</font>!</h4> -->
 							
 						</div>						
 					</div>
