--- a/chs/index_chs.html
+++ b/chs/index_chs.html
@@ -61,6 +61,7 @@
 								<h3>副教授</h3>
 								<h3><a href="http://eeit.hnu.edu.cn/"><font color="#0000FF">电气与信息工程学院</font></a></h3>
 								<h3>湖南大学</h3>
+								<p>IEEE会员 ACM会员 CCF会员</p>
 							</header>
 							<p>欢迎来到我的个人主页<br /><i class="fa fa-envelope" aria-hidden="true"></i> <a href="mailto:wangyw@hnu.edu.cn">联系我</a></p>
 							<a href="#work" class="button large scrolly">我的个人简介</a>
