--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 								<h3>Associate Professor</h3>
 								<h3><a href="http://eeit.hnu.edu.cn/"><font color="#0000FF">College of Electrical and Information Engineering</font></a></h3> 
 								<h3>Hunan University, Changsha, China</h3>
+								<p>IEEE Member, ACM Member, CCF Member</p>
 							</header>
 							<p>Welcome to visit my homepage<br /><i class="fa fa-envelope" aria-hidden="true"></i> <a href="mailto:wangyw@hnu.edu.cn">Contact me</a></p>
 							<a href="#work" class="button large scrolly">My Bio<br /></a>
