--- a/index.html
+++ b/index.html
@@ -156,13 +156,23 @@
 						<h1>Research Interests</h1>
 						<h2>RFID, Mobile Sensing, Signal Processing, Data Analysis, WSN</h2>
 					</header>
-					<div class="row">					
+					<div class="row">
+                        <div class="col-12 col-6-medium col-12-small">
+							<article class="box style2">
+								<a href="#" class="image featured"><img src="./images/low-cost.jpg" alt="" /></a>
+								<h3>A Low-cost RFID System for Distributed Parallel Sensing</h3>
+								<div align="left">
+								<p><strong>Key techniques：</strong> RFID，Software Defined Reader，Packet-in-Packet communication, Distributed sensing<br /><strong>Publications:</strong><br >[1] <font color="#FF0000">[IEEE IOTJ]</font> <strong>Yanwen Wang</strong>, Jiannong Cao and Yuanqing Zheng, "Towards A Low-cost Software-Defined UHF RFID System for Distributed Parallel Sensing," in IEEE Internet of Things Journal, doi: 10.1109/JIOT.2021.3067379. (<strong>SCI,JCR Q1</strong>)</p>
+								</div>
+							</article>
+						</div>		
+						
 					    <div class="col-12 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="#" class="image featured"><img src="./images/shakereader.jpg" alt="" /></a>
 								<h3>Let smartphones 'read' tags</h3>
 								<div align="left">
-								<p><strong>Key techniques：</strong> RFID，Gesture Identification<br /><strong>Publications:</strong><br >[1] <font color="#FF0000">[INFOCOM 2021]</font> K. Cui, <strong>Y. Wang</strong>, Y. Zheng and J. Han.  "ShakeReader: 'Read' UHF RFID using Smartphone, in IEEE INFOCOM 2021. <strong>(CCF A)</strong></p>
+								<p><strong>Key techniques：</strong> RFID，Gesture identification<br /><strong>Publications:</strong><br >[1] <font color="#FF0000">[INFOCOM 2021]</font> K. Cui, <strong>Y. Wang</strong>, Y. Zheng and J. Han.  "ShakeReader: 'Read' UHF RFID using Smartphone, in IEEE INFOCOM 2021. <strong>(CCF A)</strong></p>
 								</div>
 							</article>
 						</div>
@@ -172,7 +182,7 @@
 								<a href="#" class="image featured"><img src="./images/pic03.png" alt="" /></a>
 								<h3>Gesture Identification</h3>
 							    <div align="left">
-								<p><strong>Key techniques：</strong> Acoustic sensing, signal processing<br /><strong>Publications：<br ></strong>[1] <font color="#FF0000">[TMC]</font> <strong>Y. Wang</strong>, J. Shen and Y. Zheng, "Push the Limit of Acoustic Gesture Recognition," in IEEE Transactions on Mobile Computing, accepted to appear, 2020. (<strong>CCF A</strong>)<br />[2] <font color="#FF0000">[INFOCOM 2020]</font> <strong>Y. Wang</strong>, J. Shen and Y. Zheng, "Push the Limit of Acoustic Gesture Recognition," in IEEE INFOCOM 2020. <strong><font color="#FF0000">[Best Paper Award]</font></strong> <strong>(CCF A)</strong> <a href="./papers/infocom2020.pdf">[pdf]</a> <a href="./papers/infocom.mp4">[video]</a> <a href="./papers/infocom_slide.pdf">[slide]</a></p>
+								<p><strong>Key techniques：</strong> Acoustic sensing, Signal processing<br /><strong>Publications：<br ></strong>[1] <font color="#FF0000">[TMC]</font> <strong>Y. Wang</strong>, J. Shen and Y. Zheng, "Push the Limit of Acoustic Gesture Recognition," in IEEE Transactions on Mobile Computing, accepted to appear, 2020. (<strong>CCF A</strong>)<br />[2] <font color="#FF0000">[INFOCOM 2020]</font> <strong>Y. Wang</strong>, J. Shen and Y. Zheng, "Push the Limit of Acoustic Gesture Recognition," in IEEE INFOCOM 2020. <strong><font color="#FF0000">[Best Paper Award]</font></strong> <strong>(CCF A)</strong> <a href="./papers/infocom2020.pdf">[pdf]</a> <a href="./papers/infocom.mp4">[video]</a> <a href="./papers/infocom_slide.pdf">[slide]</a></p>
 								</div>
 							</article>
 						</div>	
