--- a/chs/index_chs.html
+++ b/chs/index_chs.html
@@ -176,12 +176,12 @@
 						<h2>移动传感，射频系统，信号处理，数据分析，无线传感器网络</h2>
 					</header>
 					<div class="row">
-					    <div class="col-12 col-6-medium col-12-small">
+                        <div class="col-12 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="../images/shakereader.jpg" alt="" /></a>
-								<h3>让智能手机'读'RFID标签</h3>
+								<a href="#" class="image featured"><img src="../images/low-cost.jpg" alt="" /></a>
+								<h3>低成本、支持分布式感知的超高频RFID系统</h3>
 								<div align="left">
-								<p><strong>主要技术：</strong> RFID，手势识别<br /><strong>主要成果：</strong><br >[1] <font color="#FF0000">[INFOCOM 2021]</font> K. Cui, <strong>Y. Wang</strong>, Y. Zheng and J. Han.  "ShakeReader: 'Read' UHF RFID using Smartphone, in IEEE INFOCOM 2021. <strong>(CCF A)</strong></p>
+								<p><strong>Key techniques：</strong> 射频识别，软件定义阅读器，跨技术通信, 分布式感知<br /><strong>主要成果：</strong><br >[1] <font color="#FF0000">[IEEE IOTJ]</font> <strong>Yanwen Wang</strong>, Jiannong Cao and Yuanqing Zheng, "Towards A Low-cost Software-Defined UHF RFID System for Distributed Parallel Sensing," in IEEE Internet of Things Journal, doi: 10.1109/JIOT.2021.3067379. <strong>(SCI,JCR Q1)</strong> <a href="../papers/low-cost.pdf">[pdf]</a></p>
 								</div>
 							</article>
 						</div>
@@ -191,7 +191,7 @@
 								<a href="#" class="image featured"><img src="../images/pic03.png" alt="" /></a>
 								<h3>手势识别</h3>
 							    <div align="left">
-								<p><strong>主要技术：</strong> 声学传感, 信号处理, 深度学习<br /><strong>主要成果：<br ></strong>[1] <font color="#FF0000">[TMC]</font> <strong>Y. Wang</strong>, J. Shen and Y. Zheng, "Push the Limit of Acoustic Gesture Recognition," in IEEE Transactions on Mobile Computing, accepted to appear, 2020. (<strong>CCF A，中科院一区</strong>)<br />[2] <font color="#FF0000">[INFOCOM 2020]</font> <strong>Y. Wang</strong>, J. Shen and Y. Zheng, "Push the Limit of Acoustic Gesture Recognition," in IEEE INFOCOM 2020. <strong><font color="#FF0000">[Best Paper Award]</font></strong> <strong>(CCF A)</strong> <a href="../papers/infocom2020.pdf">[pdf]</a> <a href="../papers/infocom.mp4">[video]</a> <a href="../papers/infocom_slide.pdf">[slide]</a></p>
+								<p><strong>主要技术：</strong> 声学传感, 信号处理, 深度学习<br /><strong>主要成果：<br ></strong>[1] <font color="#FF0000">[TMC]</font> <strong>Y. Wang</strong>, J. Shen and Y. Zheng, "Push the Limit of Acoustic Gesture Recognition," in IEEE Transactions on Mobile Computing, accepted to appear, 2020. <strong>(CCF A，中科院一区)</strong><br />[2] <font color="#FF0000">[INFOCOM 2020]</font> <strong>Y. Wang</strong>, J. Shen and Y. Zheng, "Push the Limit of Acoustic Gesture Recognition," in IEEE INFOCOM 2020. <strong><font color="#FF0000">[Best Paper Award]</font></strong> <strong>(CCF A)</strong> <a href="../papers/infocom2020.pdf">[pdf]</a> <a href="../papers/infocom.mp4">[video]</a> <a href="../papers/infocom_slide.pdf">[slide]</a></p>
 								</div>
 							</article>
 						</div>
