--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 								<a href="#" class="image featured"><img src="./images/low-cost.jpg" alt="" /></a>
 								<h3>A Low-cost RFID System for Distributed Parallel Sensing</h3>
 								<div align="left">
-								<p><strong>Key techniques：</strong> RFID，Software Defined Reader，Packet-in-Packet communication, Distributed sensing<br /><strong>Publications:</strong><br >[1] <font color="#FF0000">[IEEE IOTJ]</font> <strong>Yanwen Wang</strong>, Jiannong Cao and Yuanqing Zheng, "Towards A Low-cost Software-Defined UHF RFID System for Distributed Parallel Sensing," in IEEE Internet of Things Journal, doi: 10.1109/JIOT.2021.3067379. (<strong>SCI,JCR Q1</strong>)</p>
+								<p><strong>Key techniques：</strong> RFID，Software Defined Reader，Cross-technology communication, Distributed sensing<br /><strong>Publications:</strong><br >[1] <font color="#FF0000">[IEEE IOTJ]</font> <strong>Yanwen Wang</strong>, Jiannong Cao and Yuanqing Zheng, "Towards A Low-cost Software-Defined UHF RFID System for Distributed Parallel Sensing," in IEEE Internet of Things Journal, doi: 10.1109/JIOT.2021.3067379. <strong>(SCI,JCR Q1)</strong> <a href="./papers/low-cost.pdf">[pdf]</a></p>
 								</div>
 							</article>
 						</div>		
