--- a/chs/index_chs.html
+++ b/chs/index_chs.html
@@ -181,7 +181,7 @@
 								<a href="#" class="image featured"><img src="../images/low-cost.jpg" alt="" /></a>
 								<h3>低成本、支持分布式感知的超高频RFID系统</h3>
 								<div align="left">
-								<p><strong>主要技术：</strong> 射频识别，软件定义阅读器，跨技术通信，分布式感知<br /><strong>主要成果：</strong><br >[1] <font color="#FF0000">[IEEE IOTJ]</font> <strong>Yanwen Wang</strong>, Jiannong Cao and Yuanqing Zheng, "Towards A Low-cost Software-Defined UHF RFID System for Distributed Parallel Sensing," in IEEE Internet of Things Journal, doi: 10.1109/JIOT.2021.3067379. <strong>(SCI,JCR Q1)</strong> <a href="../papers/low-cost.pdf">[pdf]</a></p>
+								<p><strong>主要技术：</strong> 射频识别，软件定义阅读器，跨技术通信，分布式感知<br /><strong>主要成果：</strong><br >[1] <font color="#FF0000">[IEEE IOTJ]</font> <strong>Yanwen Wang</strong>, Jiannong Cao and Yuanqing Zheng, "Towards A Low-cost Software-Defined UHF RFID System for Distributed Parallel Sensing," in IEEE Internet of Things Journal, doi: 10.1109/JIOT.2021.3067379. <strong>(中科院一区)</strong> <a href="../papers/low-cost.pdf">[pdf]</a></p>
 								</div>
 							</article>
 						</div>
