--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 							<a href="#work" class="button large scrolly">My Bio<br /></a>
 							<h2><strong></strong><br /></h2>
 							<h2><strong>News</strong><br /></h2>
-							<h4>2021, March: Our low-cost RFID system for parallel sensing tasks was accepted by <font color="#0000FF">IEEE IOTJ</font>!<br /></h4>
+							<h4>2021, March: Our <font color="#FF0000">low-cost RFID system for parallel sensing tasks</font> was accepted by <font color="#0000FF">IEEE IOTJ</font>!<br /></h4>
 							<h4>2020, December: Our work <font color="#FF0000">'ShakeReader'</font> was accepted to appear to <font color="#0000FF">INFOCOM 2021</font>!<br /></h4>
 							<h4>2020, October: Our journal version of <font color="#FF0000">'RobuCIR'</font> was accepted by <font color="#0000FF">IEEE TMC</font>!<br /></h4>
 							<h4>2020, July: Our work <font color="#FF0000">'RobuCIR'</font> won <font color="#0000FF">INFOCOM 2020 Best Paper Award</font>! &#128516;&#128516;<br /></h4>
