--- a/chs/index_chs.html
+++ b/chs/index_chs.html
@@ -185,6 +185,16 @@
 								</div>
 							</article>
 						</div>
+						
+					    <div class="col-12 col-6-medium col-12-small">
+							<article class="box style2">
+								<a href="#" class="image featured"><img src="../images/shakereader.jpg" alt="" /></a>
+								<h3>Let smartphones 'read' tags</h3>
+								<div align="left">
+								<p><strong>Key techniques：</strong> RFID，Gesture identification<br /><strong>Publications:</strong><br >[1] <font color="#FF0000">[INFOCOM 2021]</font> K. Cui, <strong>Y. Wang</strong>, Y. Zheng and J. Han.  "ShakeReader: 'Read' UHF RFID using Smartphone, in IEEE INFOCOM 2021. <strong>(CCF A)</strong> <a href="../papers/shakereader.pdf">[pdf]</a></p>
+								</div>
+							</article>
+						</div>
 					
 						<div class="col-12 col-6-medium col-12-small">
 							<article class="box style2">
