--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 								<h3>Computer Science</h3>
 								<h3>Ph.D.</h3>
 								<!--  <h3>Ph.D.&nbsp&nbsp&nbsp2016-2019</h3>  -->
-								<p><br /><strong>Research interests:</strong> RFID，Mobile Sensing，Signal Processing，Data Analysis</p>
+								<p><br /><strong>Research interests:</strong> Wireless Sensing, Mobile Computing, Signal Processing, Data Analysis</p>
 							</section>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
