--- a/chs/index_chs.html
+++ b/chs/index_chs.html
@@ -98,7 +98,7 @@
                                 <h3>计算机科学</h3>
 								<h3>博士</h3>
 								<!-- <h3>博士&nbsp&nbsp&nbsp2016-2019</h3> -->
-								<p><strong>研究方向：</strong> 射频信号，移动传感，信号处理，数据分析等</p>
+								<p><strong>研究方向：</strong> 智能感知，移动计算，信号处理，数据分析等</p>
 							</section>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
