--- a/chs/index_chs.html
+++ b/chs/index_chs.html
@@ -173,7 +173,7 @@
 				<div class="container">
 					<header>
 						<h1>我的研究</h1>
-						<h2>移动传感，射频系统，信号处理，数据分析，无线传感器网络</h2>
+						<h2>无线感知，移动计算，信号处理，无线传感器网络</h2>
 					</header>
 					<div class="row">
                         <div class="col-12 col-6-medium col-12-small">
