--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 				<div class="container">
 					<header>
 						<h1>Research Interests</h1>
-						<h2>RFID, Mobile Sensing, Signal Processing, Data Analysis, WSN</h2>
+						<h2>Wireless Sensing, Mobile Computing, Signal Processing, WSN</h2>
 					</header>
 					<div class="row">
                         <div class="col-12 col-6-medium col-12-small">
