--- a/chs/index_chs.html
+++ b/chs/index_chs.html
@@ -199,7 +199,7 @@
 						<div class="col-12 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="#" class="image featured"><img src="../images/pic03.png" alt="" /></a>
-								<h3>超声波手势识别</h3>
+								<h3>手势识别</h3>
 							    <div align="left">
 								<p><strong>主要技术：</strong> 声学传感, 信号处理, 深度学习<br /><strong>主要成果：<br ></strong>[1] <font color="#FF0000">[TMC]</font> <strong>Y. Wang</strong>, J. Shen and Y. Zheng, "Push the Limit of Acoustic Gesture Recognition," in IEEE Transactions on Mobile Computing, 2020. <strong>(CCF A，中科院一区)</strong><br />[2] <font color="#FF0000">[INFOCOM 2020]</font> <strong>Y. Wang</strong>, J. Shen and Y. Zheng, "Push the Limit of Acoustic Gesture Recognition," in IEEE INFOCOM 2020. <strong><font color="#FF0000">[Best Paper Award]</font></strong> <strong>(CCF A)</strong> <a href="../papers/infocom2020.pdf">[pdf]</a> <a href="../papers/infocom.mp4">[video]</a> <a href="../papers/infocom_slide.pdf">[slide]</a></p>
 								</div>
