--- a/chs/index_chs.html
+++ b/chs/index_chs.html
@@ -67,6 +67,7 @@
 							<a href="#work" class="button large scrolly">我的个人简介</a>
 							<h2><strong></strong><br /></h2>
 							<h2><strong>最新动态</strong><br /></h2>
+							<h4>2021年5月: 我们设计的<font color="#FF0000"> ‘基于声信号的低成本液体造假检测系统’ </font>获得了<font color="#0000FF">第四届中国（上海）国际发明创新展览会金奖！</font><br /></h4>
 							<h4>2021年3月: 我们设计的<font color="#FF0000"> ‘低成本分布式并行感知RFID系统’ </font>被<font color="#0000FF">IEEE IOTJ</font>接收！<br /></h4>
 							<h4>2020年12月: 我们的工作<font color="#FF0000"> ‘ShakeReader’ </font>被<font color="#0000FF">INFOCOM 2021</font>接收！<br /></h4>
 							<h4>2020年10月: 我们的工作<font color="#FF0000"> ‘RobuCIR’ </font>的期刊版本发表在<font color="#0000FF">IEEE TMC</font>！<br /></h4>
