--- a/chs/index_chs.html
+++ b/chs/index_chs.html
@@ -361,6 +361,8 @@
 							<section class="box style1">
 							<div align="left">
 								<span class="icon featured fa-file "></span>
+								<h3>技术委员会成员</h3>
+								<p>1. IEEE RTCSA<br />2. IEEE MASS<br /></p>
 								<h3>审稿人</h3>
 								<p>1. IEEE Transactions on Mobile Computing<br />2. IEEE Transactions on Wireless Communications<br />3. ACM Computing Surveys<br />4. ACM IMWUT (Ubicomp)<br />5. IEEE Internet of Things Journal<br />6. ACM Transactions on Intelligent Systems and Technology<br />7. IEEE System Journal<br /></p>
 						    </div>
