--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 								<a href="#" class="image featured"><img src="./images/shakereader.jpg" alt="" /></a>
 								<h3>Let smartphones 'read' tags</h3>
 								<div align="left">
-								<p><strong>Key techniques：</strong> RFID，Gesture identification<br /><strong>Publications:</strong><br >[1] <font color="#FF0000">[INFOCOM 2021]</font> K. Cui, <strong>Y. Wang</strong>, Y. Zheng and J. Han.  "ShakeReader: 'Read' UHF RFID using Smartphone, in IEEE INFOCOM 2021. <strong>(CCF A)</strong> <a href="./papers/shakereader.pdf">[pdf]</a></p>
+								<p><strong>Key techniques：</strong> RFID，Gesture identification<br /><strong>Publications:</strong><br >[1] <font color="#FF0000">[INFOCOM 2021]</font> K. Cui, <strong>Y. Wang</strong>, Y. Zheng and J. Han.  "ShakeReader: 'Read' UHF RFID using Smartphone, in IEEE INFOCOM 2021. <strong>(CCF A) </strong><a href="./papers/shakereader.pdf"><i class="fa fa-file-pdf-o" style="font-size:24px;color:red"></i></a></p>
 								</div>
 							</article>
 						</div>
@@ -183,7 +183,7 @@
 								<a href="#" class="image featured"><img src="./images/pic03.png" alt="" /></a>
 								<h3>Gesture Identification</h3>
 							    <div align="left">
-								<p><strong>Key techniques：</strong> Acoustic sensing, Signal processing<br /><strong>Publications：<br ></strong>[1] <font color="#FF0000">[TMC]</font> <strong>Y. Wang</strong>, J. Shen and Y. Zheng, "Push the Limit of Acoustic Gesture Recognition," in IEEE Transactions on Mobile Computing, 2020. (<strong>CCF A</strong>)<br />[2] <font color="#FF0000">[INFOCOM 2020]</font> <strong>Y. Wang</strong>, J. Shen and Y. Zheng, "Push the Limit of Acoustic Gesture Recognition," in IEEE INFOCOM 2020. <strong><font color="#FF0000">[Best Paper Award]</font></strong> <strong>(CCF A)</strong> <a href="./papers/infocom2020.pdf">[pdf]</a> <a href="./papers/infocom.mp4">[video]</a> <a href="./papers/infocom_slide.pdf">[slide]</a></p>
+								<p><strong>Key techniques：</strong> Acoustic sensing, Signal processing<br /><strong>Publications：<br ></strong>[1] <font color="#FF0000">[TMC]</font> <strong>Y. Wang</strong>, J. Shen and Y. Zheng, "Push the Limit of Acoustic Gesture Recognition," in IEEE Transactions on Mobile Computing, 2020. (<strong>CCF A</strong>)<br />[2] <font color="#FF0000">[INFOCOM 2020]</font> <strong>Y. Wang</strong>, J. Shen and Y. Zheng, "Push the Limit of Acoustic Gesture Recognition," in IEEE INFOCOM 2020. <strong><font color="#FF0000">[Best Paper Award]</font></strong> <strong>(CCF A)</strong> <a href="./papers/infocom2020.pdf"><i class="fa fa-file-pdf-o" style="font-size:24px;color:red"></i></a> <a href="./papers/infocom.mp4"><i class="far fa-file-video" style="font-size:24px;color:red"></i></a> <a href="./papers/infocom_slide.pdf"><i class="fa fa-file-powerpoint-o" style="font-size:24px;color:red"></i></a></p>
 								</div>
 							</article>
 						</div>	
@@ -193,7 +193,7 @@
 								<a href="#" class="image featured"><img src="./images/pic02.jpg" alt="" /></a>
 								<h3>Activity Recognition</h3>
 								<div align="left">
-								<p><strong>Key techniques：</strong> RFID，Reflection modeling，Signal processing，Classification<br /><strong>Publications:</strong><br >[1] <font color="#FF0000">[UbiComp'19]</font> <strong>Y. Wang</strong> and Y. Zheng. "Modeling RFID Signal Reflection for Contact-free Activity Recognition," in ACM UbiComp 2019. <strong>(CCF A)</strong> <a href="./papers/ubicomp2019.pdf">[pdf]</a> <a href="./papers/ubicomp_slide.pdf">[slide]</a></p>
+								<p><strong>Key techniques：</strong> RFID，Reflection modeling，Signal processing，Classification<br /><strong>Publications:</strong><br >[1] <font color="#FF0000">[UbiComp'19]</font> <strong>Y. Wang</strong> and Y. Zheng. "Modeling RFID Signal Reflection for Contact-free Activity Recognition," in ACM UbiComp 2019. <strong>(CCF A)</strong> <a href="./papers/ubicomp2019.pdf"><i class="fa fa-file-pdf-o" style="font-size:24px;color:red"></i></a> <a href="./papers/ubicomp_slide.pdf"><i class="fa fa-file-powerpoint-o" style="font-size:24px;color:red"></i></a></p>
 								</div>
 							</article>
 						</div>						
@@ -203,7 +203,7 @@
 								<a href="#" class="image featured"><img src="./images/pic01.png" alt="" /></a>
 								<h3>Human Respiration Monitoring</h3>
 							    <div align="left">
-								<p><strong>Key techniques：</strong> RFID, RF signal processing<br /><strong>Publications：<br ></strong>[1] <font color="#FF0000">[TMC]</font> <strong>Y. Wang</strong> and Y. Zheng, "TagBreathe: Monitor Breathing with Commodity RFID Systems," in IEEE Transactions on Mobile Computing （TMC）, 2019. <strong>(CCF A)</strong> <a href="./papers/TMC2900214.pdf">[pdf]</a><br />[2] <font color="#FF0000">[ICDCS'17]</font> Y. Hou, <strong>Y. Wang</strong> and Y. Zheng, "TagBreathe: Monitor Breathing with Commodity RFID Systems," in IEEE ICDCS 2017. <strong>(CCF B)</strong> <a href="./papers/icdcs2017.pdf">[pdf]</a> <a href="./papers/icdcs_slide.pdf">[slide]</a></p>
+								<p><strong>Key techniques：</strong> RFID, RF signal processing<br /><strong>Publications：<br ></strong>[1] <font color="#FF0000">[TMC]</font> <strong>Y. Wang</strong> and Y. Zheng, "TagBreathe: Monitor Breathing with Commodity RFID Systems," in IEEE Transactions on Mobile Computing （TMC）, 2019. <strong>(CCF A)</strong> <a href="./papers/TMC2900214.pdf">[pdf]</a><br />[2] <font color="#FF0000">[ICDCS'17]</font> Y. Hou, <strong>Y. Wang</strong> and Y. Zheng, "TagBreathe: Monitor Breathing with Commodity RFID Systems," in IEEE ICDCS 2017. <strong>(CCF B)</strong> <a href="./papers/icdcs2017.pdf"><i class="fa fa-file-pdf-o" style="font-size:24px;color:red"></i></a> <a href="./papers/icdcs_slide.pdf"><i class="fa fa-file-powerpoint-o" style="font-size:24px;color:red"></i></a></p>
 								</div>
 							</article>
 						</div>
@@ -213,7 +213,7 @@
 								<a href="#" class="image featured"><img src="./images/pic04.jpg" alt="" /></a>
 								<h3>Software Defined Network</h3>
 								<div align="left">
-								<p><strong>Key techniques：</strong>WSN，SDN，Node sleep schedule<br /><strong>Publications:</strong><br >[1] <font color="#FF0000">[JNCA]</font> <strong>Yanwen Wang</strong>, Hainan Chen, Xiaoling Wu, Lei Shu, "An energy-efficient SDN based sleep scheduling algorithm for WSNs," Journal of Network and Computer Applications, Volume 59, 2016, Pages 39-45. <strong><font color="#FF0000">[Best Paper Award JNCA 2017]</font></strong> <strong>(JCR Q1)</strong> <a href="./papers/jnca.pdf">[pdf]</a></p>
+								<p><strong>Key techniques：</strong>WSN，SDN，Node sleep schedule<br /><strong>Publications:</strong><br >[1] <font color="#FF0000">[JNCA]</font> <strong>Yanwen Wang</strong>, Hainan Chen, Xiaoling Wu, Lei Shu, "An energy-efficient SDN based sleep scheduling algorithm for WSNs," Journal of Network and Computer Applications, Volume 59, 2016, Pages 39-45. <strong><font color="#FF0000">[Best Paper Award JNCA 2017]</font></strong> <strong>(JCR Q1)</strong> <a href="./papers/jnca.pdf"><i class="fa fa-file-pdf-o" style="font-size:24px;color:red"></i></a></p>
 								</div>
 							</article>
 						</div>
