--- a/chs/index_chs.html
+++ b/chs/index_chs.html
@@ -63,7 +63,7 @@
 								<h3><a href="http://eeit.hnu.edu.cn/"><font color="#0000FF">电气与信息工程学院</font></a></h3>
 								<h3>湖南大学</h3>
 								<p>IEEE会员 ACM会员 CCF会员<br />
-								<a href="https://scholar.google.com/citations?user=FqNAmdcAAAAJ&hl=en"><i class="ai ai-google-scholar-square ai-3x"></i></a></p>
+								<a href="https://scholar.google.com/citations?user=FqNAmdcAAAAJ&hl=en"><i class="ai ai-google-scholar-square ai-3x"></i></a>   <a href="https://orcid.org/0000-0002-8754-4355"><i class="ai ai-orcid-square ai-3x"></i></a>   <a href="https://orcid.org/0000-0002-8754-4355"><i class="ai ai-orcid-square ai-3x"></i></a></p>
 							</header>
 							<p>欢迎来到我的个人主页<br /><i class="fa fa-envelope" aria-hidden="true"></i> <a href="mailto:wangyw@hnu.edu.cn">联系我</a></p>
 							<a href="#work" class="button large scrolly">我的个人简介</a>
