--- a/chs/index_chs.html
+++ b/chs/index_chs.html
@@ -69,12 +69,13 @@
 							<a href="#work" class="button large scrolly">我的个人简介</a>
 							<h2><strong></strong><br /></h2>
 							<h2><strong>最新动态</strong><br /></h2>
+							<h4>2021年7月: 我们的工作<font color="#FF0000"> ‘ShakeReader’ </font>的期刊版本被<font color="#0000FF">IEEE TMC</font>接收！<br /></h4>
 							<h4>2021年5月: 我们设计的<font color="#FF0000"> ‘基于声信号的低成本液体造假检测系统’ </font>获得了<font color="#0000FF">第四届中国（上海）国际发明创新展览会金奖</font>！<br /></h4>
 							<h4>2021年3月: 我们设计的<font color="#FF0000"> ‘低成本分布式并行感知RFID系统’ </font>被<font color="#0000FF">IEEE IOTJ</font>接收！<br /></h4>
 							<h4>2020年12月: 我们的工作<font color="#FF0000"> ‘ShakeReader’ </font>被<font color="#0000FF">INFOCOM 2021</font>接收！<br /></h4>
 							<h4>2020年10月: 我们的工作<font color="#FF0000"> ‘RobuCIR’ </font>的期刊版本发表在<font color="#0000FF">IEEE TMC</font>！<br /></h4>
 							<h4>2020年7月: 我们的工作<font color="#FF0000"> ‘RobuCIR’ </font>获得了<font color="#0000FF">INFOCOM 2020最佳论文奖</font>！&#128516;&#128516;<br /></h4>
-							<h4>2020年7月: 我被授予<font color="#0000FF">INFOCOM 2020 Student Travel Grant</font>！&#128516;<br /></h4>
+							<!-- <h4>2020年7月: 我被授予<font color="#0000FF">INFOCOM 2020 Student Travel Grant</font>！&#128516;<br /></h4> -->
 							<h4>2019年12月: 我们的工作<font color="#FF0000"> ‘RobuCIR’ </font>被<font color="#0000FF">INFOCOM 2020</font>接收！<br /></h4>
 							<h4>2019年4月: 我们的工作<font color="#FF0000"> ‘TagBreathe’ </font>的期刊版本发表在<font color="#0000FF">IEEE TMC</font>！<br /></h4>
 							<h4>2018年12月: 我们的工作<font color="#FF0000"> ‘TACT’ </font>发表在<font color="#0000FF">ACM IMWUT (UbiComp 2019)</font>！<br /></h4>
@@ -194,7 +195,7 @@
 								<a href="#" class="image featured"><img src="../images/shakereader.jpg" alt="" /></a>
 								<h3>让智能手机"读"RFID标签</h3>
 								<div align="left">
-								<p><strong>Key techniques：</strong> RFID，Gesture identification<br /><strong>Publications:</strong><br >[1] <font color="#FF0000">[INFOCOM 2021]</font> K. Cui, <strong>Y. Wang</strong>, Y. Zheng and J. Han.  "ShakeReader: 'Read' UHF RFID using Smartphone, in IEEE INFOCOM 2021. <strong>(CCF A)</strong> <a href="../papers/shakereader.pdf"><i class="fa fa-file-pdf-o" style="font-size:24px;color:red"></i></a> <a href="../papers/shakereader_slides.pdf"><i class="fa fa-file-powerpoint-o" style="font-size:24px;color:red"></i></a></p>
+								<p><strong>Key techniques：</strong> RFID，Gesture identification<br /><strong>Publications:</strong><br >[1] <font color="#FF0000">[TMC]</font> K. Cui, <strong>Y. Wang</strong>, Y. Zheng and J. Han.  "ShakeReader: 'Read' UHF RFID using Smartphone, accepted in IEEE TMC, 2021. <strong>(CCF A)</strong><br >[2] <font color="#FF0000">[INFOCOM 2021]</font> K. Cui, <strong>Y. Wang</strong>, Y. Zheng and J. Han.  "ShakeReader: 'Read' UHF RFID using Smartphone, in IEEE INFOCOM 2021. <strong>(CCF A)</strong> <a href="../papers/shakereader.pdf"><i class="fa fa-file-pdf-o" style="font-size:24px;color:red"></i></a> <a href="../papers/shakereader_slides.pdf"><i class="fa fa-file-powerpoint-o" style="font-size:24px;color:red"></i></a></p>
 								</div>
 							</article>
 						</div>
